# WebCrawler

./: .envrc  .gitignore  pyproject.toml
src/: main.py
src/scraped_pages/: 101040engagecms.campusnexus.cloud_cdn-cgi_l_email-protection.txt  101040engagecms.campusnexus.cloud_request-open-day-booking-alert__gl_1_2Aqrotyv_2A_ga_2AMTE2Njg4OTM1.txt  101040engagecms.campusnexus.cloud_request-open-day-booking-alert__gl_1_klgct__ga_MTE2Njg4OTM1My4xNzE.txt  accounts.google.com_ServiceLogin_hl_en_cd_GB_continue_www.google.co.uk_maps_place_University_2BOf_2B.txt  consent.google.co.uk_dl_continue_www.google.co.uk_maps_place_University_2BOf_2BSurrey__51.2511924_-0.txt  help.surrey.ac.uk.txt  isc.surrey.ac.uk_.txt  isc.surrey.ac.uk_how-to-apply.txt  isc.surrey.ac.uk_international-study-centre.txt  isc.surrey.ac.uk_international-study-centre_accommodation.txt  isc.surrey.ac.uk_international-study-centre_employability-skills.txt  isc.surrey.ac.uk_international-study-centre_student-life.txt  isc.surrey.ac.uk_international-study-centre_university-of-surrey.txt  isc.surrey.ac.uk_programmes.txt  isc.surrey.ac.uk_programmes_international-foundation-year.txt  isc.surrey.ac.uk_programmes_international-year-one.txt  isc.surrey.ac.uk_programmes_pre-courses.txt  isc.surrey.ac.uk_programmes_pre-masters-preparation-programme.txt  isc.surrey.ac.uk_programmes_subjects.txt  isc.surrey.ac.uk_zh.txt  my.surrey.ac.uk.txt  my.surrey.ac.uk_.txt  my.surrey.ac.uk_campus-life.txt  my.surrey.ac.uk_campus-life_food-drink-and-nightlife.txt  my.surrey.ac.uk_campus-life_get-involved.txt  my.surrey.ac.uk_news.txt  (+168 more)
