[project]
name = "web_crawl"
version = "0.0.1"
description = "Web crawler for generating website dataset"
readme = "README.md"
# requires-python = "~=3.10"
authors = [
    { name = "Luc Harold Lucien McCutcheon", email = "lm01065@surrey.ac.uk" }
]
dependencies = [
    "bs4",
    "requests",
]

[project.optional-dependencies]
dev = ["black==23.10.1", "ruff==0.1.3", "mypy==1.6.1"]
# all = ["./algorithms/multi-task", "algorithms/DCAC"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
ignore = ["F722"]

[tool.ruff.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[[tool.mypy.overrides]]
module = ["scipy", "distrax", "optax", "igraph", "SERGIO.*"]
ignore_missing_imports = true
